# OS_course

./: .gitattributes  README.md  README_zh_CN.md
Cheating/EX1/: fakedmesg.c  msg.txt
Real/EX1/: compile.md
Real/EX1/patch/: main.c.patch  sys.c.patch  syscall_64.tbl.patch  syscalls.h.patch
Real/EX1/user/: 1.sh  2.c  3.c  4.c  a.out  main.c  mysyscall.c  mysyscall.h
Real/EX2/: .gitignore
Real/EX2/lsproc/: Makefile  lsproc.c
Real/EX2/procinfo/: Makefile  procinfo.c  test.sh
Real/EX3/: .gitignore
Real/EX3/memory/: mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.pro  myshrmem.h
Real/EX3/memory2/: mainwindow.cpp  mainwindow.h  mainwindow.ui  myshrmem.h
Real/EX3/msg/: mainwindow.cpp  mainwindow.h  mainwindow.ui  msg.pro
Real/EX3/pipe/: .gitignore
Real/EX3/pipe/FIFO/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Real/EX3/pipe/anonymousPipe/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Real/EX3/pipe/unnamedPipe/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Real/EX3/shell/: cmd1.c  cmd2.c  cmd3.c  shell.c  shell.cpp
Real/EX4/: .gitignore  CHSLBA.py  CMakeLists.txt  README.md  format.cpp  main.cpp  mycommon.h  mydisk.cpp  mydisk.h  myutil.cpp  test.cpp
Real/EX4/access/: mydir.cpp  mydir.h  myfile.cpp  myfile.h
Real/EX4/common/: CMakeLists.txt  datahandle.cpp  datahandle.h  mycommon.h  myutil.cpp  myutil.h
Real/EX4/disk/: CHSLBA.py  CMakeLists.txt  mydisk.cpp  mydisk.h
Real/EX4/disk/test/: test1.cpp  test2.cpp  test4.cpp
Real/EX4/fat32/: CMakeLists.txt  bpb.cpp  bpb.h  datacluster.cpp  datacluster.h  dbr.cpp  dbr.h  dentry.cpp  dentry.h  fat.cpp  fat.h  fsinfo.cpp  fsinfo.h  myfat32.cpp  myfat32.h  pow2.py
Real/EX4/fat32/test/: test1.cpp  test2.cpp
Real/EX4/test/: CMakeLists.txt  datahandle.cpp  dir.cpp  info.cpp  showhex.cpp
