
# deprecated
# add_executable(disk_test1 ./test/test1.cpp ${SRC_DISK} ${SRC_COMMON})
# add_executable(disk_test2 ./test/test2.cpp ${SRC_DISK} ${SRC_COMMON})
add_executable(disk_test3 ./test/test3.cpp ${SRC_DISK} ${SRC_COMMON})
add_executable(disk_test4 ./test/test4.cpp ${SRC_DISK} ${SRC_COMMON} ${SRC_FAT32})